AP-23831: exploring separate DataTableSpec